# LLVM_practice

GraphicApp/: CMakeLists.txt  README.md  app_save.c  build.sh  sim.h  start.c
GraphicApp/LLVM_IR/: app.ll
GraphicApp/src/: app.c  sim.c
